# fq

./: .gitignore  README.md  pyproject.toml
fq/: charts.py  cli.py
