[tool.poetry]
name = "linefreq"
version = "0.2.2"
description = "a real time line frequency utility"
authors = ["redraw <redraw@sdf.org>"]
license = "MIT"
repository = "https://github.com/redraw/fq"
packages = [
    {include = "fq"}
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
rich = "^12.0.0"
termplotlib = "^0.3.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.scripts]
fq = "fq.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
